congiguration des tables de la BD

--- a/Gestion_Prod_Catalogue/appsettings.json
+++ b/Gestion_Prod_Catalogue/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnextion": "Data Source=67SCC-C003-P-23; Initial Catalogu=G_Cat_Prod; Integrated Security=True"
+    "DefaultConnextion": "Data Source=67SCC-C003-P-23; Initial Catalog=G_Cat_Prod; Integrated Security=True"
   }
 }
